--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,8 +12,8 @@ layout: blog
 
   <ul class="social-buttons">
     <li><a href="https://twitter.com/share" class="twitter-share-button" data-via="whispersystems">Tweet</a></li>
-    <li><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.whispersystems.org{{ page.url | cgi_escape }}&amp;send=false&amp;layout=button_count&amp;width=450&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:107px; height:21px;" allowTransparency="true"></iframe></li>
-    <li><a href="http://news.ycombinator.com/submit"  data-title="{{ page.blog }}" data-url="http://whispersystems.me{{ page.url }}" class="hn-share-button">Vote on HN</a></li>
+    <li><iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.whispersystems.org{{ page.url | cgi_escape }}&amp;send=false&amp;layout=button_count&amp;width=450&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:107px; height:21px;" allowTransparency="true"></iframe></li>
+    <li><a href="https://news.ycombinator.com/submit"  data-title="{{ page.blog }}" data-url="https://www.whispersystems.org{{ page.url }}" class="hn-share-button">Vote on HN</a></li>
   </ul>
 
   <div id="disqus_thread"></div>
